--- a/ONGCS-Final/.classpath
+++ b/ONGCS-Final/.classpath
@@ -20,5 +20,9 @@
 	<classpathentry kind="lib" path="lib/jta-1.1.jar"/>
 	<classpathentry kind="lib" path="lib/antlr-2.7.7.jar"/>
 	<classpathentry kind="lib" path="lib/javassist-3.12.0.GA.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Ade/Desktop/LiveGraph.2.0.beta01.Complete/LiveGraph.1.01.FULL.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Ade/Desktop/LiveGraph.2.0.beta01.Complete/LiveGraph.1.01.SRC.WriterAPI.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Ade/Desktop/LiveGraph.2.0.beta01.Complete/LiveGraph.2.0.beta01.Complete.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Ade/Desktop/LiveGraph.2.0.beta01.Complete/SoftNetConsultUtils.2.01.slim.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
